test: add test in reservation for branch coverage